# gdb-debug-wire-integrated-server

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  README.md  avrdude.patch  build.rs  gdb2ptsr.py  rust-toolchain.toml  sock2ser.py  upload_image.sh
.cargo/: config.toml
.cargo/targets/: avr-atmega16u2.json
avrtest/: CMakeLists.txt  Makefile  main.c
avrtest/cmake/: env.cmake
avrtest/cmake/linker/: atmega328p.ld
avrtest/includes/: rtt.h
avrtest/src/: main.c
avrtest/src/rtt/: rtt.c
hardware_doc/: MODIFIYING_THE_BOARD.md
host_software/: _gdb_utils.py  flash.py  requirements.txt  set_frequency.py
lufa_rust_binding/: Descriptors.c  Descriptors.h  bindings.c  bindings.h
lufa_rust_binding/Config/: LUFAConfig.h
src/: Descriptors.c  avr.c  debug_wire.rs  lufa.rs  main.c  main.rs  panic.c  panic.rs  usb.rs
src/Config/: LUFAConfig.h
src/dw/: debug_wire.c  debug_wire_ll.c  devices.c  open_drain.c  open_drain_serial.c
src/dw/phisical/: open_drain_serial.c
src/gdb/: consts.c  gdb.c  rtt.c  utils.c
src/gdb/commands/: gdb_cmd_breakpoint.c  gdb_cmd_end.c  gdb_cmd_query.c  gdb_cmd_read_memory.c  gdb_cmd_read_registers.c  gdb_cmd_v.c  gdb_cmd_write_memory.c  gdb_cmd_write_registers.c  gdb_command_end.c  gdb_command_read_registers.c  gdb_command_write_memory.c  gdb_command_write_registers.c  gdb_query_command.c  gdb_v_command.c
src/include/: Descriptors.h  avr_isa.h  debug_wire.h  leds.h  open_drain.h  open_drain_serial.h  panic.h  usb_cdc.h  user_button.h
src/include/dw/: debug_wire.h  debug_wire_ll.h  devices.h  open_drain.h  open_drain_serial.h
src/include/dw/devices/: atmega328p.h  attiny85.h
src/include/gdb/: commands.h  gdb.h  pstr.h  rtt.h  utils.h
src/include/isp/: isp.h
src/include/stk500/: stk500.h
src/include/usb/: Descriptors.h  usb_cdc.h
src/lufa/: bindings.rs  wrapper.rs
src/stk500/: isp.c  isp_pgm.c  stk500.c  utils.c
src/usb/: Descriptors.c  cdc.rs  cdc_constants.rs  constants.rs  usb_cdc.c  usb_events.c  usb_events.rs
src/usb/lufa/: bindings.rs  wrapper.rs
src/user_button/: user_button.c
tesi/: .gitignore  book-cover.tex  main.tex  main.tex.blg  presentation.tex  unibsthesis.cls
tesi/attachments/: attachments.aux  attachments.tex
tesi/biblio/: attachments.bib  datasheets.bib  images.bib  refs.bib  sites.bib
tesi/diagrams/: avr-sram-timings.puml  build.sh  dw-break.puml  phy-rx-state.puml  phy-rx-timing.puml  phy-tx-state.puml  phy-tx-timing.puml  rtt-handling.puml  sys-arch.puml  uart-timings-unsync.puml  uart-timings.puml
tesi/images/: FAC_SIMILE_Frontespizio_tesi_UNIBS_magistrali.docx  arduino-uno.xcf  cap_begin.xcf  cap_removed.xcf  pki_ca.pem  pki_ca_chain.pem  r3-rst-cap-pres.xcf  vscode-dbg.xcf
tesi/puml/: uart-timings.puml
tesi/settings/: bibliography.tex  format.tex  language.tex  listings.tex  mainpage.tex  utils.tex
tesi/settings/languages/: C.tex  avr-assembly.tex  cmake.tex  txt.tex
tesi/sims/: convert.py  phy-sim-bjt.csv  phy-sim-bjt.sim  phy-sim-diode.csv  phy-sim-diode.sim  phy-sim-schottky.csv
tesi/structure/: bibliografia.tex  conclusione.tex  discussione.tex  introduzione.tex  ringraziamenti.tex
tesi/structure/discussione/: ambiente_di_sviluppo.tex  architettura_di_sistema.tex  architettura_e_modello_di_comunicazione.tex  debugwire.tex  hardware_di_destinazione.tex  implementazione.tex  livello_fisico.tex  real_time_terminal.tex  server_gdb.tex
